--- a/style.css
+++ b/style.css
@@ -167,12 +167,12 @@ a:hover{
     margin-top:30px;
     height:150px;
     width:150px;
-    border-radius:50%;
+    border-radius:40%;
     background-color:lightgreen;
 }
 
 .box8:hover{
-   transform:scaleY(2);
+   transform:rotate(90deg);
    transition-duration: 2s;
 }
 
