--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ a{
     color:black;}
 
 .box{
-   background-color:crimson;
+   background-color:blueviolet;
    height:30px;
    width:30px;
    border-radius:50%;
@@ -171,6 +171,12 @@ a{
 .box5:hover{
    transform:scaleY(2);
    transition-duration: 2s;
+}
+
+h1{
+    margin-top:40px;
+    text-align: center;
+    font-size:35px;
 }
 
 h4{
